[package]
name = "window-switcher"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
indexmap = "1.9.2"
log = "0.4.17"
once_cell = "1.17.1"
rust-ini = "0.18.0"
simple-logging = "2.0.2"
xml = "0.8.10"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
embed-resource = "1.6.5"

[profile.release]
lto = true
strip = true
opt-level = "z"

[workspace]
members = [
    "tools/inspect-windows"
]
