[package]
name = "inspect-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
indexmap = "1.9.2"
window-switcher = { path = "../.."}

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]
