[package]
name = "inspect-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
indexmap = "2.2.3"
window-switcher = { path = "../.."}

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
